// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles choice 1`] = `
Object {
  "imagePickerPending": false,
  "localUri": "foo.png",
}
`;

exports[`handles localUri 1`] = `
<View>
  <View>
    <ImagePicker
      id="1"
      onChoice={[Function]}
      onPendingChange={[Function]}
      title="Upload a Photo"
      type="userAvatar"
    >
      <Image
        source={
          Object {
            "uri": "foo.png",
          }
        }
      />
    </ImagePicker>
    <View>
      <Text>
        Upload a Photo
      </Text>
    </View>
  </View>
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View>
        <View>
          <Text>
            Continue
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`handles no image 1`] = `
<View>
  <View>
    <ImagePicker
      id="1"
      onChoice={[Function]}
      onPendingChange={[Function]}
      title="Upload a Photo"
      type="userAvatar"
    >
      <View>
        <Icon
          name="AddImage"
        />
      </View>
    </ImagePicker>
    <View>
      <Text>
        Upload a Photo
      </Text>
    </View>
  </View>
  <Button
    onPress={[Function]}
    text="Continue"
  />
</View>
`;

exports[`has navigationOptions 1`] = `
Object {
  "headerBackTitle": null,
  "headerStyle": Object {
    "backgroundColor": "#0DC39F",
    "shadowColor": "transparent",
  },
  "headerTintColor": "#9ee7d9",
  "headerTitle": "STEP 2/5",
  "headerTitleStyle": Object {
    "color": "white",
    "fontFamily": "Circular-Bold",
    "fontSize": 12,
  },
}
`;

exports[`matches last snapshot 1`] = `
<View>
  <View>
    <ImagePicker
      id="1"
      onChoice={[Function]}
      onPendingChange={[Function]}
      title="Upload a Photo"
      type="userAvatar"
    >
      <Image
        source={
          Object {
            "uri": "foo.png",
          }
        }
      />
    </ImagePicker>
    <View>
      <Text>
        Upload a Photo
      </Text>
    </View>
  </View>
  <Button
    onPress={[Function]}
    text="Continue"
  />
</View>
`;
